@@ -9,6 +9,8 @@ master repository (http://jonas.nitro.dk/tig/tig.git) will be retired.
 
 Improvements:
 
+ - Use git-log(1)s default commit ordering. The old behavior can be
+   restored by adding `set commit-order = topo` to ~/.tigrc.
  - Support staging of single lines. Bound to '1' default. (GH #21)
  - Use +<lineno> to open the initial view at an arbitrary line. (GH #20)
  - Add show-notes ~/.tigrc option. Notes are displayed by default.
